--- a/themes/sgsc/sass/_content.scss
+++ b/themes/sgsc/sass/_content.scss
@@ -32,6 +32,11 @@
 	margin: 0 0 $base__space-unit;
 }
 
+.container {
+	width: 1024px;
+	margin: auto;
+}
+
 /* Asides */
 
 .blog .format-aside .entry-title,
