changing font__main in variable

--- a/themes/sgsc/sass/_variables.scss
+++ b/themes/sgsc/sass/_variables.scss
@@ -24,7 +24,7 @@ $color__link-hover: #F5A623;
 
 // Typography
 $font__header: montserrat;
-$font__body: lato;
+$font__main: lato;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
 //desktop font size
