adding change of head to make it black

--- a/themes/sgsc/sass/_header.scss
+++ b/themes/sgsc/sass/_header.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   height: 13rem;  
   a {
-    color: magenta;
+    color: black;
   }
   a:hover {
     color: $color__link-hover;
