add header style

--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -670,7 +670,7 @@ object {
       justify-content: space-between;
   height: 13rem; }
   .site-header a {
-    color: magenta; }
+    color: black; }
   .site-header a:hover {
     color: #F5A623; }
 
