add responsiveness to menu, add toggle-able menu js

--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -63,3 +63,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "page-templates";
 @import "header";
 @import "front-page";
+@import "about";
