--- a/themes/sgsc/sass/_header.scss
+++ b/themes/sgsc/sass/_header.scss
@@ -1,65 +1,68 @@
-.site-header {
-  display: flex;
-  justify-content: space-between;
-  height: 13rem;  
-  a {
-    color: black;
+@media screen and (min-width: 600px) {
+
+  .site-header {
+    display: flex;
+    justify-content: space-between;
+    height: 13rem;  
+    a {
+      color: black;
+    }
+    a:hover {
+      color: $color__link-hover;
+    }
   }
-  a:hover {
-    color: $color__link-hover;
-  }
-}
 
-.main-navigation .search-field{ 
-	display: none;
-	overflow:hidden;
-	border: none;
-	background: transparent;
-	&:focus{
-		outline: none;
-	}
-}
-
-.logo-header {
-  display: flex;
-  position: absolute;
-  align-items: flex-start;
-}
-
-.icon-search{
-	cursor: pointer;
-}
-
-.search-submit {
-	display: inline;
-  border: none;
-  background: none;
-  box-shadow: none;
-}
-
-.search-form {
-	fieldset {
-	border: none;
-	}
-	input {
+  .main-navigation .search-field{ 
     display: none;
-		border: none;
-		outline: none;
-	}
-}
-
-.menu {
-  display: flex;
-  align-items: flex-end;
-}
-
-.main-navigation {
-  padding-bottom: 0.5rem;
-  li {
-    padding: 0px 1.4rem;
+    overflow:hidden;
+    border: none;
+    background: transparent;
+    &:focus{
+      outline: none;
+    }
   }
-}
 
-.icon-search .fa-search {
-  font-size: 1.5rem;
+  .logo-header {
+    display: flex;
+    position: absolute;
+    align-items: flex-start;
+  }
+
+  .icon-search{
+    cursor: pointer;
+  }
+
+  .search-submit {
+    display: inline;
+    border: none;
+    background: none;
+    box-shadow: none;
+  }
+
+  .search-form {
+    fieldset {
+    border: none;
+    }
+    input {
+      display: none;
+      border: none;
+      outline: none;
+    }
+  }
+
+  .menu {
+    display: flex;
+    align-items: flex-end;
+  }
+
+  .main-navigation {
+    padding-bottom: 0.5rem;
+    li {
+      padding: 0px 1.4rem;
+    }
+  }
+
+  .icon-search .fa-search {
+    font-size: 1.5rem;
+  }
 }
