add and style feature-image, title, link for about

--- a/themes/sgsc/sass/_variables.scss
+++ b/themes/sgsc/sass/_variables.scss
@@ -68,3 +68,6 @@ $font__sub-body: 18px;
 $font__m-header: 22px;
 $font__m-sub-header: 16px;
 $font__m-body: 12px;
+//border
+$p_padding: .3rem 1.5rem;
+$p_border: 2px $black solid;
