--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -1,3 +1,53 @@
 /*--------------------------------------------------------------
 # Front-Page
 --------------------------------------------------------------*/
+
+.home .content-area {
+  display: flex;
+  justify-content: center;
+  .site-main {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    .learn-about-story {
+      display: flex;
+      height: 276px;
+      flex-flow: column nowrap;
+      background: grey;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      img {
+        height: 276px;
+        width: auto;
+      }
+      .front-learn {
+        position: absolute;
+        bottom: 0;
+        height: 138px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        align-items: center;
+        background: white;
+        opacity: .8;
+        h1 {
+          margin: 0;
+          padding-bottom: .5rem;
+        }
+        a {
+          text-decoration: none;
+          color: $black;
+          p {
+            padding: $p_padding;
+            border: $p_border;
+            margin: 0;
+          }
+        }
+      }
+    }
+  }
+}
