--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -412,7 +412,7 @@ a {
   a:visited {
     color: purple; }
   a:hover, a:focus, a:active {
-    color: #F5A623; }
+    color: midnightblue; }
   a:focus {
     outline: thin dotted; }
   a:hover, a:active {
@@ -672,7 +672,7 @@ object {
   .site-header a {
     color: black; }
   .site-header a:hover {
-    color: #F5A623; }
+    color: midnightblue; }
 
 .main-navigation .search-field {
   display: none;
@@ -766,15 +766,56 @@ object {
         -ms-flex-direction: column;
             flex-direction: column;
         align-items: center;
-        background: white;
-        opacity: .8; }
+        background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)); }
         .home .content-area .site-main .learn-about-story .front-learn h1 {
           margin: 0;
           padding-bottom: .5rem; }
         .home .content-area .site-main .learn-about-story .front-learn a {
           text-decoration: none;
           color: #000000; }
+          .home .content-area .site-main .learn-about-story .front-learn a:hover {
+            color: #ffffff; }
           .home .content-area .site-main .learn-about-story .front-learn a p {
             padding: 0.3rem 1.5rem;
             border: 2px #000000 solid;
             margin: 0; }
+            .home .content-area .site-main .learn-about-story .front-learn a p:hover {
+              border: none;
+              background: #f5a623;
+              z-index: 2;
+              opacity: 1; }
+      .home .content-area .site-main .learn-about-story .donate-btn {
+        background-color: #F91E72;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: 100; }
+        .home .content-area .site-main .learn-about-story .donate-btn i {
+          padding: .4rem;
+          color: #000000; }
+          .home .content-area .site-main .learn-about-story .donate-btn i:hover {
+            color: #f5a623; }
+    .home .content-area .site-main .programs-event-blog .front-program,
+    .home .content-area .site-main .programs-event-blog .front-events,
+    .home .content-area .site-main .programs-event-blog .front-blog {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-pack: center;
+          justify-content: center;
+      height: 138px;
+      -ms-flex-align: center;
+          align-items: center;
+      background: #f5a623; }
+      .home .content-area .site-main .programs-event-blog .front-program a,
+      .home .content-area .site-main .programs-event-blog .front-events a,
+      .home .content-area .site-main .programs-event-blog .front-blog a {
+        text-decoration: none;
+        color: #000000; }
+      .home .content-area .site-main .programs-event-blog .front-program:hover,
+      .home .content-area .site-main .programs-event-blog .front-events:hover,
+      .home .content-area .site-main .programs-event-blog .front-blog:hover {
+        border: 2px #000000 solid 4px; }
+    .home .content-area .site-main .programs-event-blog .front-events {
+      background: #45cdcb; }
+    .home .content-area .site-main .programs-event-blog .front-blog {
+      background: #ffffff; }
