--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -1,58 +1,66 @@
-/*--------------------------------------------------------------
+  /*--------------------------------------------------------------
 # Front-Page
 --------------------------------------------------------------*/
-
-.home .content-area {
-  display: flex;
-  justify-content: center;
-  .site-main {
+  
+  .home .content-area {
     display: flex;
-    flex-flow: column nowrap;
     justify-content: center;
-    align-items: center;
-    .learn-about-story {
+    .site-main {
       display: flex;
-      height: 276px;
       flex-flow: column nowrap;
-      background: grey;
       justify-content: center;
       align-items: center;
-      position: relative;
-      img {
-        height: 276px;
-        width: auto;
+      article {
+        margin: 0;
       }
-      .front-learn {
-        position: absolute;
-        bottom: 0;
-        height: 138px;
-        width: 100%;
+      .learn-about-story {
         display: flex;
+        height: 276px;
+        flex-flow: column nowrap;
+        background: grey;
         justify-content: center;
         align-items: center;
-        flex-direction: column;
-        align-items: center;
-        background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
-        h1 {
-          margin: 0;
-          padding-bottom: .5rem;
+        position: relative;
+        img {
+          height: 276px;
+          width: auto;
         }
-        @include m-button;
+        .front-learn {
+          position: absolute;
+          bottom: 0;
+          height: 138px;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          align-items: center;
+          background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
+          h1 {
+            margin: 0;
+            padding-bottom: .5rem;
+          }
+          @include m-button;
+        }
+        @include m-donate;
       }
-      @include m-donate;
-    }
-    .programs-event-blog {
       .front-program,
       .front-events,
-      .front-blog {
+      .front-blog,
+      .front-join {
         display: flex;
         justify-content: center;
-        height: 138px;
         align-items: center;
         background: $orange;
+        height: 138px;
         a {
           text-decoration: none;
+          height: 100%;
+          width: 100%;
           color: $black;
+          display: flex;
+          justify-content: center;
+          align-items: center;
         }
         &:hover {
           border: $p_border 4px;
@@ -64,6 +72,29 @@
       .front-blog {
         background: $white;
       }
+      .front-join {
+        background: $blue;
+      }
+      .involved-join {
+        height: 138px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        &:hover {
+          border: $p_border 4px;
+        }
+        .front-involved {
+          display: flex;
+          flex-flow: row wrap;
+          width: 100%;
+          justify-content: space-around;
+          @include m-button;
+          p {
+            border: none !important;
+            background: $pink;
+          }
+        }
+      }
     }
   }
-}
