--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -745,7 +745,6 @@ object {
       height: 276px;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
-      background: grey;
       -ms-flex-pack: center;
           justify-content: center;
       -ms-flex-align: center;
@@ -808,7 +807,8 @@ object {
       -ms-flex-align: center;
           align-items: center;
       background: #f5a623;
-      height: 138px; }
+      height: 138px;
+      width: 100%; }
       .home .content-area .site-main .front-program a,
       .home .content-area .site-main .front-events a,
       .home .content-area .site-main .front-blog a,
@@ -832,8 +832,51 @@ object {
       background: #45cdcb; }
     .home .content-area .site-main .front-blog {
       background: #ffffff; }
-    .home .content-area .site-main .front-join {
-      background: #45cdcb; }
+    .home .content-area .site-main .feature-gallery {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-pack: center;
+          justify-content: center;
+      -ms-flex-align: center;
+          align-items: center;
+      position: relative;
+      height: 276px;
+      background: gray;
+      width: 100%; }
+      .home .content-area .site-main .feature-gallery .front-gallery {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-pack: center;
+            justify-content: center;
+        -ms-flex-align: center;
+            align-items: center;
+        -ms-flex-direction: column;
+            flex-direction: column;
+        position: absolute;
+        bottom: 0;
+        height: 138px;
+        width: 100%;
+        background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)); }
+        .home .content-area .site-main .feature-gallery .front-gallery h1 {
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-pack: center;
+              justify-content: center;
+          text-align: center; }
+        .home .content-area .site-main .feature-gallery .front-gallery a {
+          text-decoration: none;
+          color: #000000; }
+          .home .content-area .site-main .feature-gallery .front-gallery a:hover {
+            color: #ffffff; }
+          .home .content-area .site-main .feature-gallery .front-gallery a p {
+            padding: 0.3rem 1.5rem;
+            border: 2px #000000 solid;
+            margin: 0; }
+            .home .content-area .site-main .feature-gallery .front-gallery a p:hover {
+              border: none;
+              background: #f5a623;
+              z-index: 2;
+              opacity: 1; }
     .home .content-area .site-main .involved-join {
       height: 138px;
       display: -ms-flexbox;
@@ -843,7 +886,8 @@ object {
       -ms-flex-pack: center;
           justify-content: center;
       -ms-flex-align: center;
-          align-items: center; }
+          align-items: center;
+      width: 100%; }
       .home .content-area .site-main .involved-join:hover {
         border: 2px #000000 solid 4px; }
       .home .content-area .site-main .involved-join .front-involved {
@@ -871,3 +915,5 @@ object {
         .home .content-area .site-main .involved-join .front-involved p {
           border: none !important;
           background: #F91E72; }
+    .home .content-area .site-main .front-join {
+      background: #45cdcb; }
