--- a/themes/sgsc/sass/_footer.scss
+++ b/themes/sgsc/sass/_footer.scss
@@ -1,18 +1,106 @@
-.site-footer {
-   padding: 30px;
-    // width: 90%;
-    display: flex;
+footer {
+    max-width: 1024px;
+    margin: auto;
 }
 
-.footer-links {
-    width: 75%;
-    font-size: 1.25rem;
-    display: inline;
-    list-style-type: none;
-    li {
-        display: flex;
+.site-info {
+    padding: 0 5%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color: $black;
+    &:hover{
+        color: $orange;
     }
 }
 
-.fa {
+.footer-links {
+    width: 123px;
+}
+
+.footer-links p:last-child {
+    margin-bottom: 0;
+}
+
+
+.footer-icons {
+    // width: 65%;
+    display: flex;
+    align-items: flex-end;
+}
+
+.facebook {
+    background-image: url("../../assets/images/facebook-circle-sm.svg");
+    background-repeat: no-repeat; 
+    margin-right: 10px;
+    height: 25px;
+    width: 25px
+}
+
+.twitter {
+    background-image: url("../../assets/images/twitter-circle-sm.svg");
+    background-repeat: no-repeat; 
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 25px;
+    width: 25px
+}
+
+.copywrite {
+    text-align: center;
+    padding: 0 5%;
+}
+
+
+@media all and (min-width: $desktop-view) {
+
+.site-info {
+    padding: 0 5%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    color: $black;
+    &:hover{
+        color: $orange;
+    }
+}
+
+.footer-links {
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    min-width: 526px;
+    p {
+        width: 175px;
+        margin: 0;
+    }
+}
+
+
+.footer-icons {
+    // width: 65%;
+    display: flex;
+    align-items: flex-end;
+}
+
+.facebook {
+    background-image: url("../../assets/images/facebook-circle-lg.svg");
+    height: 50px;
+    width: 50px
+}
+
+.twitter {
+    background-image: url("../../assets/images/twitter-circle-lg.svg");
+    height: 50px;
+    width: 50px
+}
+
+
+.copywrite {
+    text-align: center;
+    padding: 0 5%;
+}
+
 }
