--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -1,127 +1,128 @@
-  /*--------------------------------------------------------------
+    /*--------------------------------------------------------------
 # Front-Page
 --------------------------------------------------------------*/
-  
-  .home .content-area {
-    display: flex;
-    justify-content: center;
-    .site-main {
+    
+    .home .content-area {
       display: flex;
-      flex-flow: column nowrap;
       justify-content: center;
-      align-items: center;
-      article {
-        margin: 0;
-      }
-      .learn-about-story {
+      .site-main {
         display: flex;
-        height: 276px;
         flex-flow: column nowrap;
         justify-content: center;
         align-items: center;
-        position: relative;
-        img {
+        article {
+          margin: 0;
+        }
+        .learn-about-story {
+          display: flex;
           height: 276px;
-          width: auto;
-        }
-        .front-learn {
-          position: absolute;
-          bottom: 0;
-          height: 138px;
-          width: 100%;
-          display: flex;
+          flex-flow: column nowrap;
           justify-content: center;
           align-items: center;
-          flex-direction: column;
-          align-items: center;
-          background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
-          h1 {
-            margin: 0;
-            padding-bottom: .5rem;
+          position: relative;
+          @media screen and (min-width: 480px) {}
+          img {
+            height: 276px;
+            width: auto;
           }
-          @include m-button;
-        }
-        @include m-donate;
-      }
-      .front-program,
-      .front-events,
-      .front-blog,
-      .front-join {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: $orange;
-        height: 138px;
-        width: 100%;
-        a {
-          text-decoration: none;
-          height: 100%;
-          width: 100%;
-          color: $black;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        }
-        &:hover {
-          border: $p_border 4px;
-        }
-      }
-      .front-events {
-        background: $blue;
-      }
-      .front-blog {
-        background: $white;
-      }
-      .feature-gallery {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        height: 276px;
-        background: gray;
-        width: 100%;
-        .front-gallery {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-          position: absolute;
-          bottom: 0;
-          height: 138px;
-          width: 100%;
-          background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
-          h1 {
+          .front-learn {
+            position: absolute;
+            bottom: 0;
+            height: 138px;
+            width: 100%;
             display: flex;
             justify-content: center;
-            text-align: center;
+            align-items: center;
+            flex-direction: column;
+            align-items: center;
+            background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
+            h1 {
+              margin: 0;
+              padding-bottom: .5rem;
+            }
+            @include m-button;
           }
-          @include m-button;
+          @include m-donate;
         }
-      }
-      .involved-join {
-        height: 138px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        &:hover {
-          border: $p_border 4px;
-        }
-        .front-involved {
+        .front-program,
+        .front-events,
+        .front-blog,
+        .front-join {
           display: flex;
-          flex-flow: row wrap;
+          justify-content: center;
+          align-items: center;
+          background: $orange;
+          height: 138px;
           width: 100%;
-          justify-content: space-around;
-          @include m-button;
-          p {
-            border: none !important;
-            background: $pink;
+          a {
+            text-decoration: none;
+            height: 100%;
+            width: 100%;
+            color: $black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+          &:hover {
+            border: $p_border 4px;
           }
         }
-      }
-      .front-join {
-        background: $blue;
+        .front-events {
+          background: $blue;
+        }
+        .front-blog {
+          background: $white;
+        }
+        .feature-gallery {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: relative;
+          height: 276px;
+          background: gray;
+          width: 100%;
+          .front-gallery {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            position: absolute;
+            bottom: 0;
+            height: 138px;
+            width: 100%;
+            background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
+            h1 {
+              display: flex;
+              justify-content: center;
+              text-align: center;
+            }
+            @include m-button;
+          }
+        }
+        .involved-join {
+          height: 138px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          &:hover {
+            border: $p_border 4px;
+          }
+          .front-involved {
+            display: flex;
+            flex-flow: row wrap;
+            width: 100%;
+            justify-content: space-around;
+            @include m-button;
+            p {
+              border: none !important;
+              background: $pink;
+            }
+          }
+        }
+        .front-join {
+          background: $blue;
+        }
       }
     }
-  }
