--- a/themes/sgsc/sass/_variables.scss
+++ b/themes/sgsc/sass/_variables.scss
@@ -1,5 +1,6 @@
 // Structure
 $base__space-unit: 1.5rem;
+$mobile_width: 470px;
 // Colors
 $color__background-body: #fff;
 $color__background-screen: #f1f1f1;
